börjar återställas med gamla utseendet i nytt format

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <header>
                 <div class="topnav"><a href="index.html">WestCoast Education</a>
                     <div id="myLinks">
-                        <button id="openCourseModal">Kurser</button>
-                        <button id="openAdminModal">Admin</button>
-                        <button id="openCartmodal">Logga in/ Kundvagn</button>
+                        <a href="Kurssida.html">Kurssida</a>
                     </div>
                     <a href="javascript:void(0);" class="icon" onclick="myBurgerMenu()">
                         <i class="fa fa-bars"></i>
@@ -49,201 +47,6 @@
             </p>
                 <image id="computer" src="imagesvideos/pexels-photo-3568521.jpeg" />
         </div>
-        <div id="kurser" class="kurser">
-            <div id="kursModal" class="kurs_modal">
-                <div class="modal">
-                    <div class="container">
-                        <header>
-                            <img id="cabin" src="red-g59a8ffb41_1920.jpg" />
-                        </header>
-                        <div class="rubrik">
-                            <p>
-                                Valbara kurser.
-                                <br>
-                                Nedan ser du de kurser som går att läsa på vår skola.
-                                <br>
-                                Klicka på köp när du bestämt dig för en kurs och den läggs till i din kundvagn.
-                            </p>
-                        </div>
-                        <div class="courses">
-                            <div class="grid-item" id="Internetkunskap">Vad är internet?
-                                <img src="imagesvideos/pexels-pixabay-147413.jpg" />
-                                Start: VT-23.
-                                <br>
-                                15HP
-                                <br>
-                                1.4875SEK.
-                                <br>
-                                <span class="buy" onClick="buyInternet">Köp</span>
-                            </div>
-                            <div class="grid-item" id="ProgSpråk">C#, Java, C++ och mycket mer.
-                                <img src="imagesvideos/pexels-markus-spiske-2004161.jpg">
-                                Start: HT-22.
-                                <br>
-                                60HP.
-                                <br>
-                                19.475SEK.
-                                <br>
-                                <span class="buy" onClick="buyProgramming">Köp</span>
-                            </div>
-                            <div class="grid-item" id="AI">AI - <br> Prata med robotar.
-                                <img src="imagesvideos/pexels-alex-knight-2599244.jpg">
-                                Start: HT-22.
-                                <br>
-                                15HP.
-                                <br>
-                                <br>
-                                11.250SEK.
-                                <span class="buy" onClick="buyRobots">Köp</span>
-                            </div>
-                            <div class="grid-item" id="Cloud">Cloud - <br> Mer än fluffiga moln.
-                                <img src="imagesvideos/pexels-brett-sayles-2100921.jpg">
-                                Start: VT-23.
-                                <br>
-                                30HP.
-                                <br>
-                                22.725SEK.
-                                <br>
-                                <span class="buy" onClick="buyCloud">Köp</span>
-                            </div>
-                            <div class="grid-item" id="OfficePaketet">Office 365, grundkurs.
-                                <img src="imagesvideos/pexels-photo-574069.jpeg">
-                                Start: VT-23,
-                                <br>
-                                7HP<br>
-                                1.475SEK.
-                                <br>
-                                <span class="buy" onClick="buyOffice">Köp</span>
-                            </div>
-                            <div class="grid-item" id="Paint">Paint - <br> Din bästa vän.
-                                <img src="imagesvideos/pexels-deeana-arts-1576210.jpg">
-                                Start: HT-22.
-                                <br>
-                                7HP
-                                <br>
-                                1.475SEK.
-                                <br>
-                                <span class="buy" onClick="buyPaintFunction()">Köp</span>
-                            </div>
-                            <div class="grid-item" id="OfficePaketet">Office 365, Advanced.
-                                <img src="imagesvideos/pexels-photo-574069.jpeg">
-                                Start: VT-23,
-                                <br>
-                                15HP
-                                <br>
-                                12.368SEK.
-                                <br>
-                                <span class="buy">Köp</span>
-                            </div>
-                            <div class="grid-item" id="Paint">Paint - <br> Din bästa vän, Advanced.
-                                <img src="imagesvideos/pexels-deeana-arts-1576210.jpg">
-                                Start: HT-22.
-                                <br>
-                                15HP
-                                <br>
-                                10.205SEK.
-                                <br>
-                                <span class="buy" onClick="buyPaintAdvanced()">Köp</span>
-                                <div class="alert hide">
-                                    <span class="fas fa-check-circle"></span>
-                                    <span class="msg"> Course has been added to cart. </span>
-                                    <div class="close-btn">
-                                        <span class="fa fa-close"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button id="closeCoursesBtn" class="closeCoursesBtn"> Close</button>
-            </div>
-            <script>
-                $('.buy').click(function () {
-                    $('.alert').addClass("show");
-                    $('.alert').removeClass("hide");
-                    $('.alert').addClass("showAlert");
-                    setTimeout(function () {
-                        $('.alert').removeClass("show");
-                        $('.alert').addClass("hide");
-                    }, 5000);
-                });
-                $('.close-btn').click(function () {
-                    $('.alert').removeClass("show");
-                    $('.alert').addClass("hide");
-                });
-            </script>
-        </div>
-        <div id="admin" class="admin">
-            <div id="adminModal" class="admin_Modal">
-                    <div class="infoText">
-                    <h1>
-                        Här kan du lägga till eller ta bort kurser i kurslistan.
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Ex corrupti error nostrum totam quibusdam.
-                        Consequuntur velit mollitia id, molestias atque dolores eveniet
-                        laboriosam aliquam cupiditate quasi tempora fuga fugiat minima!
-                    </p>
-                    <div class="existingCourses">
-                        <p>
-                            Redan existerande kurser:
-                        </p>
-                        <ul id="courseList"></ul>
-                    </div>
-                    <button id="courseBtn" class="newCourseBtn">Add new course</button>
-                    <div id="adminModalContainer" class="admin_Modal_Container">
-                        <div class="modal">
-                            <form action="/admin.html" method="get">
-                                <div id="courseNumber">
-                                    <h1>Kursnummer</h1>
-                                    <input type="number">
-                                </div>
-                                <div id="courseTitle">
-                                    <h1>Kurstitel</h1>
-                                    <input type="text">
-                                </div>
-                                <div id="courseDescription">
-                                    <h1>Kursbeskrivning</h1>
-                                    <input type="text">
-                                </div>
-                                <div id="courseLength">
-                                    <h1>Kursens längd</h1>
-                                    <input type="number">
-                                </div>
-                                <button id="saveBtn" class="save_Btn">Save</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button id="closeAdminBtn" class="closeAdminBtn"> Close</button>
-        </div>
-        <div id="kundvagn" class="kundvagn">
-            <div id="cartModal" class="cart_Modal"></div>
-                <div class="cart">
-                    <h1>Din kundvagn.</h1>
-                    <p>
-                        Kurser i din lista:
-                    <ul id="coursesInCart"></ul>
-                    ewdfrhg
-                    </p>
-                    <button id="openBtn" class="buyBtn">Köp</button>
-                </div>
-                <div id="modalContainer" class="modalContainer">
-                    <div class="modal">
-                        <h1>Courses has been payed. </h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Eum neque assumenda ullam omnis et atque illo reiciendis nemo.
-                            Iusto libero possimus, corporis dolore animi
-                            officiis et consequatur voluptatum assumenda fuga.
-                        </p>
-                    <button id="closeBtn" class="closeBtn">Close</button>
-                </div>
-            </div>
-            <button id="closeCartBtn" class="closeCartBtn"> Close</button>
-        </div>
-    </div>
     <div class="footer">All rights reserved West Coast Education.</div>
     <script src="scripts/events.js"></script>
 </body>
