påbörjad lista i kundvagn

--- a/kurssida.html
+++ b/kurssida.html
@@ -49,7 +49,7 @@
                                 <br>
                                 1.4875SEK.
                                 <br>
-                                <span class="buy" onClick="buyInternet()">Köp</span>
+                                <span class="buy" id="buyInternet" onClick="buyInternet()">Köp</span>
                             </div>
                             <div class="grid-item" id="ProgSpråk">C#, Java, C++ och mycket mer.
                                 <img src="imagesvideos/pexels-markus-spiske-2004161.jpg">
