--- a/kurssida.html
+++ b/kurssida.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script><!--Varför behövde jag lägga till denna helt plötsligt? Och varför försvann mina färger?-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://kit.fontawesome.com/dd0c43a00c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="kurssida.css">
     <title>Kurssida - WestCoast Education</title>
 </head>
