--- a/kurssida.html
+++ b/kurssida.html
@@ -166,7 +166,7 @@
                         <p>
                             Redan existerande kurser:
                         </p>
-                        <ul id="courseList"></ul>
+                        <ul id="existingCourses"></ul>
                     </div>
                     <button id="courseBtn" class="newCourseBtn">Add new course</button>
                     <button id="closeAdminBtn" class="closeAdminBtn"> Close</button>
@@ -187,7 +187,7 @@
                                 </div>
                                 <div id="courseLength">
                                     <h1>Kursens längd</h1>
-                                    <input type="number">
+                                    <input type="text">
                                 </div>
                                 <button id="saveBtn" class="save_Btn">Save</button>
                                 <button id="closeAdminBtn" class="closeAdminBtn"> Close</button>
@@ -223,6 +223,7 @@
         </div>
     </div>
     <div class="footer">All rights reserved West Coast Education.</div>
+    <script src="scripts/arrays.js"></script>
     <script src="scripts/events.js"></script>
 </body>
 
