försöker lista ut spara-knappen

--- a/kurssida.html
+++ b/kurssida.html
@@ -171,7 +171,7 @@
                     <button id="courseBtn" class="newCourseBtn">Add new course</button>
                     <button id="closeAdminBtn" class="closeAdminBtn"> Close</button>
                     <div id="adminModalContainer" class="admin_Modal_Container">
-                        <div class="modal">
+                        <div class="adminCourseModal">
                             <form action="/kurssida.html" method="get">
                                 <div id="courseNumber">
                                     <h1>Kursnummer</h1>
@@ -189,7 +189,7 @@
                                     <h1>Kursens längd</h1>
                                     <input type="text">
                                 </div>
-                                <button id="saveBtn" class="save_Btn">Save</button>
+                                <button id="saveBtn" class="save_Btn" onclick="Savebtn()">Save</button>
                                 <button id="closeAdminBtn" class="closeAdminBtn"> Close</button>
                             </form>
                         </div>
