raderat onödiga filer

--- a/kurssida.html
+++ b/kurssida.html
@@ -173,21 +173,21 @@
                         <div id="adminModalContainer" class="admin_Modal_Container">
                             <div id="adminCourseModal" class="adminCourseModal">
                                 <form onsubmit="return false">
-                                    <div id="courseNumber">
+                                    <div>
                                         <h1>Kursnummer</h1>
-                                        <input type="text">
+                                        <input id="courseNumber" type="text">
                                     </div>
-                                    <div id="courseTitle">
+                                    <div>
                                         <h1>Kurstitel</h1>
-                                        <input type="text">
+                                        <input id="courseTitle" type="text">
                                     </div>
-                                    <div id="courseDescription">
+                                    <div >
                                         <h1>Kursbeskrivning</h1>
-                                        <input type="text">
+                                        <input id="courseDescription" type="text">
                                     </div>
-                                    <div id="courseLength">
+                                    <div>
                                         <h1>Kursens längd</h1>
-                                        <input type="text">
+                                        <input id="courseLength" type="text">
                                     </div>
                                     <button id="saveBtn" class="save_Btn">Save</button>
                                     <button id="closeAdminModalBtn" class="closeAdminBtn"> Close</button>
