påbörjat med kundvagnen

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
                 <image id="computer" src="imagesvideos/pexels-photo-3568521.jpeg" />
         </div>
     <div class="footer">All rights reserved West Coast Education.</div>
-    <script src="scripts/events.js"></script>
+    <script src="scripts/events.js" async></script>
 </body>
 </html>
